# minipaxos

./: Cargo.toml
src/: acceptor.rs  communication.rs  learner.rs  lib.rs  proposer.rs  reader.rs
tests/consistence/: communication.rs  main.rs
tests/single/: backend.rs  main.rs
