[package]
name = "minipaxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["sync", "time"] }
uuid = "1.6.1"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"]}
uuid = { version = "1.6.1", features = ["v4"] }
